# ArcaneDynamicsCutieHack2025

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: ArcaneMath.h  GUIRender.h  calc.h
resources/: UML-Diagram
src/: ArcaneMath.cpp  GUIRender.cpp  main.cpp  mathTest.cpp
